--- a/main.css
+++ b/main.css
@@ -34,7 +34,7 @@ body {
 }
 
 .qb {
-	background-image: url('file:///home/uma/Desktop/webpage/frontimage.jpg') ;
+	background-image: url('frontimage.jpg') ;
 	background-position: center top;
   background-image: fixed;
 
